--- a/TM_EB_full.html
+++ b/TM_EB_full.html
@@ -3,4 +3,112 @@
 <h1 solid #ccc; padding-bottom:10px;">
 <img src="img/icon_league_1.png" style="height:58px; vertical-align:middle; margin-right:6px;">
 통통배 난이도 패턴</h1>
+<hr><h2><span style='color:#ffaa00'>[심] VS 빅 맘</span><span style='color:#ffaa00'> (보스) </span></h2>
+<html>
+<head>
+<meta charset="UTF-8">
+<style>
+  body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; font-size: 26px; }
+  img { height: 40px; vertical-align: middle; margin-right: 2px; }
+  h1 { font-size: 36px; color: gold; margin-bottom: 0.3em; }
+  h2 { solid #f2f2f7; padding-bottom: 0.3em; font-size: 30px; }
+  h3 { font-size: 28px; margin-top: 1em; }
+  .icon-line { display: flex; align-items: center; gap: 6px; margin-bottom: 4px; font-size: 24px; }
+  .label-initial { background-color: #267d4a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-preemptive { background-color: #24567a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-special { background-color: #aa8500; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-death { background-color: #b71c1c; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-interrupt { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-after1turn { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+</style>
+</head>
+<body>
+       <h1></h1>
+<h3>Stage 1:</h3>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">강인형, 자유형, 격투형 캐릭터의 VS 효과의 게이지를 5 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">강인형, 자유형, 격투형 캐릭터의 슈퍼 체인지 효과를 5 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">강인형, 자유형, 격투형 캐릭터의 필살기 턴을 5턴 단축</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
+<br>
+<h3>Stage 2:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: 미식기사 슈트로이젠</span><br>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_color_change.png">힘 속성, 기 속성, 속 속성, 지 속성 변화(2개 이상일 경우 랜덤 변화)</div>
+<div class="icon-line"><img src="img/common_bind.png">4턴 동안 중간단 봉쇄</div>
+<br>
+<h3>Stage 3:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: 빅 맘</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 50% 감소</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">1턴 동안 체인 계수가 2 이하일 경우 공격력 50% 감소</div>
+<div class="icon-line"><img src="img/common_icon_209_skill.png">1턴 동안 체인 계수가 4 이상일 경우 공격력 50% 감소</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_damage.png">6000 데미지</div>
+<span class="label-after1turn">적의 체력에 따라 속성이 변화:</span><br>
+<div class="icon-line"><img src="img/filter_attribute_heart.png">빅 맘: 남은 HP가 100% 이하일 때</div>
+<div class="icon-line"><img src="img/filter_attribute_intellect.png">빅 맘: 남은 HP가 50% 이하일 때</div>
+<br>
+</body></html>
+<hr><h2><span style='color:#d24dff'>[지] VS 키드</span><span style='color:#d24dff'> (난입) </span></h2>
+<html>
+<head>
+<meta charset="UTF-8">
+<style>
+  body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; font-size: 26px; }
+  img { height: 40px; vertical-align: middle; margin-right: 2px; }
+  h1 { font-size: 36px; color: gold; margin-bottom: 0.3em; }
+  h2 { solid #f2f2f7; padding-bottom: 0.3em; font-size: 30px; }
+  h3 { font-size: 28px; margin-top: 1em; }
+  .icon-line { display: flex; align-items: center; gap: 6px; margin-bottom: 4px; font-size: 24px; }
+  .label-initial { background-color: #267d4a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-preemptive { background-color: #24567a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-special { background-color: #aa8500; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-death { background-color: #b71c1c; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-interrupt { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-after1turn { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+</style>
+</head>
+<body>
+       <h1></h1>
+<h3>Stage 1:</h3>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">강인형, 박식형, 타격형 캐릭터의 VS 효과의 게이지를 5 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">강인형, 박식형, 타격형 캐릭터의 슈퍼 체인지 효과를 5 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">강인형, 박식형, 타격형 캐릭터의 필살기 턴을 5턴 단축</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
+<br>
+<h3>Stage 2:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: 킬러</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">1턴 동안 받는 데미지를 70% 감소</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">1턴 동안 방어력 5000배</div>
+<span class="label-after1turn">적의 체력에 따라 속성이 변화:</span><br>
+<div class="icon-line"><img src="img/filter_attribute_heart.png">킬러: 남은 HP가 100% 이하일 때</div>
+<div class="icon-line"><img src="img/filter_attribute_intellect.png">킬러: 남은 HP가 50% 이하일 때</div>
+<br>
+<h3>Stage 3:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: 유스타스 ‘캡틴’ 키드</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/popuptext_slot_bomb.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해][폭탄] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">1턴 동안 받는 데미지를 70% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">1턴 동안 10000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">1턴 동안 방어력 5000배</div>
+<div class="icon-line"><img src="img/common_guts_icon.png">1턴 동안 남은 체력 1로 버티기 효과</div>
+<span class="label-after1turn">적의 체력에 따라 속성이 변화:</span><br>
+<div class="icon-line"><img src="img/filter_attribute_intellect.png">유스타스 ‘캡틴’ 키드: 남은 HP가 100% 이하일 때</div>
+<div class="icon-line"><img src="img/filter_attribute_heart.png">유스타스 ‘캡틴’ 키드: 남은 HP가 50% 이하일 때</div>
+<br>
+</body></html>
 </body></html>
