--- a/KIZUNA_BOSS1.html
+++ b/KIZUNA_BOSS1.html
@@ -17,93 +17,123 @@
 </style>
 </head>
 <body>
-       <h1>VS 루피&로</h1>
+       <h1>VS 시라호시&맨셸리</h1>
        <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#258325; font-weight:bold;">일반보스</span> <span style="color:#258325; font-weight:bold;">[기]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_charge.png">격투형, 야심형, 박식형 캐릭터의 필살기 턴을 15턴 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">격투형, 야심형, 박식형 캐릭터의 슈퍼 체인지 효과를 15 단축</div>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">격투형, 야심형, 박식형 캐릭터의 VS 효과의 게이지를 15 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">참격형, 자유형, 박식형 캐릭터의 필살기 턴을 15턴 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">참격형, 자유형, 박식형 캐릭터의 슈퍼 체인지 효과를 15 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">참격형, 자유형, 박식형 캐릭터의 VS 효과의 게이지를 15 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 2:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: 트라팔가 로</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">방어력 감소 무효</div>
+<div class="icon-line"><img src="img/common_weak_02.png">약점 타입: 참격형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_blind.png">6턴 동안 의성어 은폐 상태</div>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">3턴 동안 15000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_chain_upper_limit.png">2턴 동안 체인 계수의 상한 수치를 1.1배로 고정시킨다</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_3.png">3턴 동안 탭 타이밍 배리어(PERFECT 2회)</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 슬롯 변환</span><br>
-<div class="icon-line">1회까지</div>
-<div class="icon-line"><img src="img/common_icon_247_skill.png">5턴 동안 [힘][기][속][심][지][무지개][고기][연] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">7턴 동안 방어력 1000000배</div>
+<div class="icon-line"><img src="img/popuptext_slot_purple.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [힘][기][속][심][지] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_incidence_down_own.png">3턴 동안 [힘][기][속][심][지] 슬롯을 [불리] 슬롯으로 취급</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv1~Lv20의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 루피&로</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 시라호시&맨셸리</span><br>
+<div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 레베카</span><br>
+<div class="icon-line"><img src="img/common_icon_210.png">피해 데미지 증가 이외의 상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
 <div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_despair.png">10턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/common_special_bind.png">5턴 동안 상단, 중간단 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_bind.png">7턴 동안 심 속성, 지 속성 캐릭터 봉쇄</div>
+<div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 상단 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">5턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 2턴 감소(대상의 상태 이상: 슬롯 영향 증폭)</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 100000배</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">7턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
+<div class="icon-line"><img src="img/common_icon_chain_down.png">5턴 동안 체인 계수 증가량 0.1배</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">5턴 동안 체인 계수가 2.0 이하일 경우 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_bomb.png">1턴 동안 슬롯 배리어([폭탄] 슬롯 2회)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과 해제</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상승(가산)</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_235_skill.png">3턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 20000을(를) 받는다</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv21~Lv30의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 루피&로</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 시라호시&맨셸리</span><br>
+<div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 레베카</span><br>
+<div class="icon-line"><img src="img/common_icon_210.png">피해 데미지 증가 이외의 상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
 <div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_despair.png">15턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/common_special_bind.png">7턴 동안 상단, 중간단 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_bind.png">7턴 동안 심 속성, 지 속성 캐릭터 봉쇄</div>
+<div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 상단, 중간단 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">5턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 2턴 감소(대상의 상태 이상: 슬롯 영향 증폭)</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 100000배</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">10턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
+<div class="icon-line"><img src="img/common_icon_chain_down.png">5턴 동안 체인 계수 증가량 0.1배</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">5턴 동안 체인 계수가 2.0 이하일 경우 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_bomb.png">1턴 동안 슬롯 배리어([폭탄] 슬롯 2회)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과 해제</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상승(가산)</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_235_skill.png">3턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 20000을(를) 받는다</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv31~의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 루피&로</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 시라호시&맨셸리</span><br>
+<div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 레베카</span><br>
+<div class="icon-line"><img src="img/common_icon_210.png">피해 데미지 증가 이외의 상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
 <div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_despair.png">15턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/common_special_bind.png">7턴 동안 상단, 중간단 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_bind.png">7턴 동안 심 속성, 지 속성 캐릭터 봉쇄</div>
+<div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 상단, 중간단 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/quest_combo_barrer_hit.png">3턴 동안 hit 배리어(8hit)</div>
-<div class="icon-line"><img src="img/common_icon_tap_countlimit.png">3턴 동안 탭 횟수 제한 4회</div>
-<div class="icon-line"><img src="img/common_icon_230_skill.png">5턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 2턴 감소(대상의 상태 이상: 슬롯 영향 증폭)</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 100000배</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">10턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">5턴 동안 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/common_despair.png">9턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_icon_chain_down.png">5턴 동안 체인 계수 증가량 0.1배</div>
+<div class="icon-line"><img src="img/common_icon_chain_damagedown.png">5턴 동안 체인 계수가 2.0 이하일 경우 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_bomb.png">1턴 동안 슬롯 배리어([폭탄] 슬롯 2회)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과 해제</div>
+<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상승(가산)</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_235_skill.png">3턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 20000을(를) 받는다</div>
 <br>
 
 <div id="__dl_btn__" style="
